--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,12 @@ name = "codebrain"
 version = "0.1.0"
 description = ""
 authors = ["KyoungHwan <xzt______@naver.com>"]
-readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
 fastapi = "^0.111.0"
 uvicorn = "^0.30.1"
+sqlalchemy = "^2.0.31"
 
 
 [build-system]
